# craft2025_pearcat

./: .cursorignore  .gitignore  CMakeLists.txt  busy.cpp  constants.h  controller.h  ctrl_disk_obj_req.cpp  ctrl_disk_obj_req.h  data_analysis.cpp  data_analysis.h  debug.cpp  debug.h  delete.cpp  disk_obj_req.h  free_block.cpp  gc.cpp  gc_al.cpp  info_20250407_150842.txt  init.cpp  io.h  main.cpp  read.cpp  readme.md  request.md  run.bat  run.sh  test_performance.cpp  token_table.h  tools.h  verify.cpp  verify.h  write.cpp  write_copy.cpp  zip.sh  最佳大模型应用-Pearcat.pptx
analysis/: ana_cyc.ipynb  analysis_sample_official copy.ipynb
